--- a/login.html
+++ b/login.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="./public/css/style.css">
 </head>
 
-<body>
+<body style="padding-top: 90px;">
     <nav class="navbar navbar-expand-lg bg-dark navbar-dark py-3 fixed-top">
         <div class="container">
             <a href="index.html" class="navbar-brand text-light fs-3">Tech<span class="text-warning">Blog</span></a>
@@ -37,30 +37,37 @@
             </div>
         </div>
     </nav>
-    <section class="d-flex justify-content-center align-items-center mt-3 p-5">
-        <div class="container" >
-            <div class="card">
-                <form class="px-4 py-3">
-                    <div class="mb-3">
-                        <label for="exampleDropdownFormEmail1" class="form-label">Email address</label>
-                        <input type="email" class="form-control" id="exampleDropdownFormEmail1"
-                            placeholder="email@example.com">
+
+    <section class=" p-5 p-lg-0  text-center text-sm-start">
+        <div class="container">
+            <div class="d-sm-flex align-items-center justify-content-between">
+                <div>
+                    <h1>Welcome to uor Tech<span class="text-warning">Bole</span></h1>
+                    <h3>Please Login or <a href="./signup.html">Sign Up</a></h3>
+                    <div class="container mt-3">
+                        <div class="card">
+                            <form class="px-4 py-3">
+                                <div class="mb-3">
+                                    <label for="exampleDropdownFormEmail1" class="form-label">Email address</label>
+                                    <input type="email" class="form-control" id="exampleDropdownFormEmail1"
+                                        placeholder="email@example.com">
+                                </div>
+                                <div class="mb-3">
+                                    <label for="exampleDropdownFormPassword1" class="form-label">Password</label>
+                                    <input type="password" class="form-control" id="exampleDropdownFormPassword1"
+                                        placeholder="Password">
+                                </div>
+                                <button type="submit" class="btn btn-primary w-100">Login</button>
+                            </form>
+                        </div>
                     </div>
-                    <div class="mb-3">
-                        <label for="exampleDropdownFormPassword1" class="form-label">Password</label>
-                        <input type="password" class="form-control" id="exampleDropdownFormPassword1"
-                            placeholder="Password">
-                    </div>
-                    <button type="submit" class="btn btn-primary">Login</button>
-                </form>
-                <div class="dropdown-divider"></div>
-                <a class="dropdown-item" href="signup.html">New around here? Sign up</a>
+                </div>
+                <img class="img-fluid w-50 d-none d-sm-block" src="./public/img/code.svg" alt="" />
             </div>
         </div>
-
-
-
     </section>
+
+
     <!-- Footer -->
     <footer class="p-5 bg-dark text-white text-center fixed-bottom">
         <div class="container">
@@ -76,6 +83,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous">
     </script>
+    <script src="./public/js/login.js"></script>
 </body>
 
 </html>
