--- a/dashbord.html
+++ b/dashbord.html
@@ -48,8 +48,8 @@
                         </p>
                         <hr>
                         <div class="d-flex justify-content-start align-items-center ">
-                            <button type="button" class="btn btn-secondary mb-3 mx-2">Edit post</button>
-                            <button type="button" class="btn btn-danger mb-3">Delet post</button>
+                            <button type="button" class="btn btn-secondary mb-3 mx-2" id="editBtn">Edit post</button>
+                            <button type="button" class="btn btn-danger mb-3"i d="deleteBtn">Delet post</button>
                         </div>
                     </div>
                     <div class="card mb-4 bg-light">
@@ -59,8 +59,8 @@
                         </p>
                         <hr>
                         <div class="d-flex justify-content-start align-items-center ">
-                            <button type="button" class="btn btn-secondary mb-3 mx-2">Edit post</button>
-                            <button type="button" class="btn btn-danger mb-3">Delet post</button>
+                            <button type="button" class="btn btn-secondary mb-3 mx-2" id="editBtn">Edit post</button>
+                            <button type="button" class="btn btn-danger mb-3" id="deleteBtn">Delet post</button>
                         </div>
                     </div>
                     <div class="card mb-4 bg-light">
@@ -70,8 +70,8 @@
                         </p>
                         <hr>
                         <div class="d-flex justify-content-start align-items-center ">
-                            <button type="button" class="btn btn-secondary mb-3 mx-2">Edit post</button>
-                            <button type="button" class="btn btn-danger mb-3">Delet post</button>
+                            <button type="button" class="btn btn-secondary mb-3 mx-2" id="editBtn">Edit post</button>
+                            <button type="button" class="btn btn-danger mb-3" id="deleteBtn">Delete post</button>
                         </div>
                     </div>
                 </div>
@@ -88,7 +88,7 @@
                     <textarea class="form-control" id="newPost" rows="3"></textarea>
                 </div>
                 <div class="container d-flex justify-content-center align-items-center mb-3">
-                    <button type="button" class="btn btn-warning">Add new post</button>
+                    <button type="button" class="btn btn-warning" id="newPost">Add new post</button>
                 </div>
             </div>
         </div>
@@ -97,10 +97,6 @@
     <footer class="p-5 bg-dark text-white text-center position-relative">
         <div class="container">
             <p class="lead">Copyright &copy; 2021 Hakeem's Prodution</p>
-
-            <a href="#" class="position-absolute bottom-0 end-0 p-5">
-                <i class="bi bi-arrow-up-circle h1"></i>
-            </a>
         </div>
     </footer>
     <!-- javaScript Linkslk -->
