--- a/signup.html
+++ b/signup.html
@@ -37,7 +37,7 @@
             </div>
         </div>
     </nav>
-    <section class=" p-5 p-lg-0  text-center text-sm-start">
+    <section class="mt-5 p-5 p-lg-0  text-center text-sm-start">
         <div class="container">
             <div class="d-sm-flex align-items-center justify-content-between">
                 <div>
